# stm32-vscode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mk_extract.mk  toolchain-arm32.cmake
Src/: main.c
boards/nucleo-l432kc/: .mxproject  Makefile  nucleo-l432kc.ioc
boards/nucleo-l432kc/Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
boards/nucleo-l432kc/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
boards/nucleo-l432kc/apps/: CMakeLists.txt
nucleo-f0/blink/: .mxproject  Makefile  blink.ioc
nucleo-f0/blink/Src/: main.c  stm32l4xx_hal_msp.c
nucleo32/: .mxproject  CMakeLists.txt  nucleo32.ioc
nucleo32/Core/Src/: main.c
nucleo32/nucleo32/: Makefile
